# carbon-intensity-forecast-tracking

./: .gitattributes  .gitignore  .releaserc.json  CHANGELOG.md  LICENSE  README.md  TODO.md  commit_msg.txt  download_historic_data.py  experiments.ipynb  investigation.ipynb  makefile  notebook.ipynb  plots.ipynb  requirements-dev.in  requirements-dev.txt  requirements-minimal.in  requirements-minimal.txt  requirements.in  requirements.txt  run.py  schema.sql  setup.cfg  stats_history_national.csv
carbon_intensity_scraper/: cli.py  db.py  download.py
charts/: notebook.ipynb  stats_history_national.csv
cift/: analyse.py  analysis.py  cli.py  client.py  colourmap.py  graph.py  ingest.py  investigation.py  migrate.py  parse.py  readme.py  store.py
data/: 14.2023-03-13T1201Z.json  2023-03-09T20:01Z.json  2023-03-09T2130Z.json  2023-03-09T2200Z.json  2023-03-09T2230Z.json  2023-03-09T2330Z.json  2023-03-10T0000Z.json  2023-03-10T0030Z.json  2023-03-10T0200Z.json  2023-03-10T0300Z.json  2023-03-10T0400Z.json  2023-03-10T0430Z.json  2023-03-10T0500Z.json  2023-03-10T0530Z.json  2023-03-10T0600Z.json  2023-03-10T0630Z.json  2023-03-10T0700Z.json  2023-03-10T0730Z.json  2023-03-10T0800Z.json  2023-03-10T0830Z.json  2023-03-10T0900Z.json  2023-03-10T0930Z.json  2023-03-10T1000Z.json  2023-03-10T1030Z.json  2023-03-10T1100Z.json  2023-03-10T1130Z.json  2023-03-10T1200Z.json  2023-03-10T1230Z.json  2023-03-10T1300Z.json  2023-03-10T1330Z.json  2023-03-10T1400Z.json  2023-03-10T1430Z.json  2023-03-10T1500Z.json  2023-03-10T1530Z.json  2023-03-10T1600Z.json  2023-03-10T1630Z.json  2023-03-10T1700Z.json  2023-03-10T1730Z.json  2023-03-10T1800Z.json  2023-03-10T1830Z.json  (+83 more)
data-3hr/: 2023-03-10T1831Z.json  2023-03-10T1901Z.json  2023-03-10T1931Z.json  2023-03-10T2001Z.json
data-6hr/: 2023-03-10T1701Z.json  2023-03-10T1731Z.json  2023-03-10T1801Z.json  2023-03-10T1901Z.json  2023-03-10T1931Z.json  2023-03-10T2001Z.json  2023-03-10T2031Z.json  2023-03-10T2101Z.json  2023-03-10T2131Z.json  2023-03-10T2201Z.json  2023-03-10T2231Z.json  2023-03-10T2301Z.json  2023-03-10T2331Z.json  2023-03-11T0001Z.json  2023-03-11T0031Z.json  2023-03-11T0101Z.json  2023-03-11T0131Z.json  2023-03-11T0201Z.json  2023-03-11T0231Z.json  2023-03-11T0301Z.json  2023-03-11T0331Z.json  2023-03-11T0401Z.json  2023-03-11T0431Z.json  2023-03-11T0501Z.json  2023-03-11T0531Z.json  2023-03-11T0601Z.json  2023-03-11T0631Z.json  2023-03-11T0701Z.json  2023-03-11T0731Z.json  2023-03-11T0801Z.json  2023-03-11T0831Z.json  2023-03-11T0901Z.json  2023-03-11T0931Z.json  2023-03-11T1001Z.json  2023-03-11T1031Z.json  2023-03-11T1101Z.json  2023-03-11T1131Z.json  2023-03-11T1201Z.json  2023-03-11T1231Z.json  2023-03-11T1301Z.json
data_forecasts/: 2023-03-12T1853Z_2023-03-12T1831Z.json  2023-03-12T1901Z.json  2023-03-12T1912Z_2023-03-12T1901Z.json  2023-03-12T1931Z.json  2023-03-12T2001Z.json  2023-03-12T2031Z.json  2023-03-12T2101Z.json  (+30 more)
scrape/: api.py  (+10 more)
(+107739 files in other folders)
