[metadata]
name = carbon_intensity_forecast_tracking
author = Nick Powell
version = 0.0.1
description = Tracking UK National Grid carbon intensity forecasts
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: MIT License

[options]
packages =
    find:
install_requires =
    tabulate>=0.8
python_requires = >=3.10

[options.entry_points]
console_scripts =
    track_ci = scrape.cli:main
    carbon_intensity_forecast_tracking = scrape.cli:main

[flake8]
enable-extensions = EIM002
extend-ignore = E501,EIM001,B950
extend-select = B9
per-file-ignores =
    */__init__.py:F401

[isort]
profile = black
force_single_line = true
known_first_party = kraken_db_tools

[mypy]
check_untyped_defs = true
enable_error_code =
    truthy-bool
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
pretty = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true
